[package]
name = "helix-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.3"
portable-pty = "0.4.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
vte = "0.11.0"
once_cell = "1.17.1"
